fix(boot): complete 2.6 upstream compatibility